--- a/_posts/2016-08-22-MVC和MVVM关系及对比.md
+++ b/_posts/2016-08-22-MVC和MVVM关系及对比.md
@@ -25,12 +25,12 @@ M -- V -- VM：model - view/viewController - viewModel
 
 ##### 1、标准MVC：
 
-![img](assets/2016/images/MVC和MVVM-1.png)
+![img](/assets/images/2016/MVC和MVVM-1.png)
 
 ##### 2、MVC简化为MV：
 
-![img](assets/2016/images/MVC和MVVM-2.png)
+![img](/assets/images/2016/MVC和MVVM-2.png)
 
 ##### 3、MV添加VM变为MVVM：
 
-![img](assets/2016/images/MVC和MVVM-3.png)
+![img](/assets/images/2016/MVC和MVVM-3.png)
