fix import font

--- a/_posts/2016-08-22-MVC和MVVM关系及对比.md
+++ b/_posts/2016-08-22-MVC和MVVM关系及对比.md
@@ -17,7 +17,7 @@ M -- V -- VM：model - view/viewController - viewModel
 
 ### 二、分析：
 
-1、因为MVVM中，是将原MVC的（V和C）统一归为（V），即原MVC被简化为：M -- V
+1、因为MVVM中，是将原MVC的**V和C**统一归为**V**，即原MVC被简化为：M -- V
 
 2、再在原基础上添加VM层，即：M -- V -- VM
 
